# gumbo

./: Cargo.toml  LICENSE  README.md
src/: action.rs  change.rs  cli.rs  errors.rs  fields.rs  main.rs  names.rs  setup_shell.rs
src/command_handlers/: init.rs  mod.rs
src/command_handlers/convert/: mod.rs
src/command_handlers/database/: errors.rs  list_tables.rs  mod.rs
src/command_handlers/database/model_from_table/: mod.rs  tests.rs
src/command_handlers/database/model_from_table/code/: mod.rs  tests.rs
src/command_handlers/generate/: controller.rs  dotenv.rs  migration.rs  mod.rs  model.rs  scaffold.rs
src/templates/: asset_controller.rs  build.rs  cargo_config.rs  controller_mod.rs  docker.rs  errors.rs  greetings_controller.rs  helpers_mod.rs  inputcss.rs  main.rs  mod.rs  models.rs  models_session.rs  modrs.rs  views_mod.rs
src/templates/auth_controller/: mod.rs
src/templates/auth_controller/providers/: fakeoauth.rs  google.rs  mod.rs
src/templates/controller/: create.rs  delete.rs  edit.rs  empty.rs  index.rs  mod.rs  new.rs  update.rs
src/templates/migrations/: create_table.rs  init.rs  mod.rs
src/templates/view/: edit.rs  empty.rs  form.rs  index.rs  mod.rs  new.rs  single.rs
