[package]
name = "gumbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
codegen = "0.2"
cruet = "0.14"
pluralizer = "0.4"
rand = "0.8.5"
#proc-macro2 = "1.0"
#quote = "1.0"
thiserror = "1.0"
