[package]
name = "gumbo"
version = "0.1.12"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/lex148/gumbo"
description = "Best of the best rust projects all mixed together into a website framework"
categories = ["web-programming", "development-tools"]
keywords = ["web", "cli", "server", "generator", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
codegen = "0.2"
cruet = "0.14"
pluralizer = "0.4"
rand = "0.8.5"
thiserror = "1.0"
welds = { version = '0.4', features=["postgres","mysql","mssql","sqlite","migrations"] }
welds-connections = { version = '^0.4.9', features=["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1", features=["rt"] }

