[package]
name = "gumbo"
version = "0.1.28"
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/lex148/gumbo"
description = "Best of the best rust projects all mixed together into a website framework"
categories = ["web-programming", "development-tools"]
keywords = ["web", "cli", "server", "generator", "tool"]

[features]
"default" = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "string"] }
codegen = "0.3"
cruet = "0.15"
pluralizer = "0.5"
rand = "0.9"
thiserror = "2.0"
welds = { version = '^0.4', features=["postgres","mysql","mssql","sqlite","migrations"] }
welds-connections = { version = '^0.4', features=["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["rt"] }
tabled = "0.20"
dotenvy = "0.15"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tokio-macros = "2.6"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
dirs = "6.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
